make mailchimp work

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 
           $('#mc-form').ajaxChimp({
-            url: 'https://cards.us17.list-manage.com/subscribe/post?u=fa1dbc312f198f6d9da54c0af',
+            url: 'https://cards.us17.list-manage.com/subscribe/post?u=fa1dbc312f198f6d9da54c0af&id=0d883253b2',
             language: 'en'
           });
 
