--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
         var form = $(elem);
         var email = form.find('input[type=email]');
         var label = form.find('label[for=' + email.attr('id') + ']');
-        var newUrl = "https://www.slohacks.com/thanks!.html";
+        // var newUrl = "https://www.slohacks.com/thanks!.html";
         var settings = $.extend({
           'url': form.attr('action'),
           'language': 'en'
