--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contac</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=387818848"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=408694307" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=237390155"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4160217861" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=365509273" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=331067784" id="nomq_pagesheet"/>
   <![endif]-->
     <!--HTML Widget code-->
 
@@ -228,17 +228,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
 
 
-										<style>.fieldname{display:block;} </style>
-
-
 										<style>.fieldlastname{display:block;} </style>
+
+
+										<style>.fieldname{display:block;} </style>
 								</span>
        </div>
       </div>
      </div>
      <a class="nonblock nontext anim_swing clearfix ose_pre_init mse_pre_init" id="u296-5" href="index.html#future"><!-- content --><p class="shared_content" data-content-guid="u296-5_0_content">Welcome.</p><p class="shared_content" data-content-guid="u296-5_1_content">&nbsp;</p></a>
      <a class="nonblock nontext anim_swing clearfix ose_pre_init mse_pre_init" id="u303-5" href="index.html#contac"><!-- content --><p class="shared_content" data-content-guid="u303-5_0_content">To the future of business cards.</p><p class="shared_content" data-content-guid="u303-5_1_content">&nbsp;</p></a>
-     <a class="nonblock nontext anim_swing clearfix ose_pre_init mse_pre_init" id="u309-4" href="index.html#details"><!-- content --><p class="shared_content" data-content-guid="u309-4_0_content">CONTAC</p></a>
+     <a class="nonblock nontext anim_swing mse_pre_init ose_pre_init" id="u309-4" href="index.html#details"><!-- rasterized frame --><img class="temp_no_img_src" id="u309-4_img" alt="CONTAC" width="1250" height="214" data-orig-src="images/u309-4.png?crc=429910365" src="images/blank.gif?crc=4208392903"/></a>
      <div class="museBGSize ose_pre_init mse_pre_init" id="u363"><!-- simple frame --></div>
      <div class="mse_pre_init shared_content" id="u390" data-content-guid="u390_content"><!-- simple frame --></div>
      <div class="museBGSize ose_pre_init mse_pre_init" id="u434"><!-- simple frame --></div>
@@ -277,7 +277,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext anim_swing clearfix grpelem temp_no_id" href="index.html#contac" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u303-5"><!-- content --><span class="placeholder" data-placeholder-for="u303-5_0_content"><!-- placeholder node --></span><span class="placeholder" data-placeholder-for="u303-5_1_content"><!-- placeholder node --></span></a>
      </div>
      <div class="clearfix colelem" id="pu309-4"><!-- group -->
-      <a class="nonblock nontext anim_swing clearfix grpelem temp_no_id" href="index.html#details" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u309-4"><!-- content --><span class="placeholder" data-placeholder-for="u309-4_0_content"><!-- placeholder node --></span></a>
+      <a class="nonblock nontext anim_swing grpelem temp_no_id" href="index.html#details" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u309-4"><!-- rasterized frame --><img class="temp_no_id temp_no_img_src" alt="CONTAC" width="907" height="214" data-orig-src="images/u309-42.png?crc=3828848997" data-orig-id="u309-4_img" src="images/blank.gif?crc=4208392903"/></a>
       <div class="museBGSize clearfix grpelem temp_no_id" data-orig-id="u363"><!-- group -->
        <div class="museBGSize grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u434"><!-- simple frame --></div>
       </div>
@@ -363,24 +363,24 @@ Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized');
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $('#bp_infinity').one('muse_this_bp_activate', function(){
-$('#u394-4').registerOpacityScrollEffect([{"in":[-Infinity,3700],"opacity":0,"fade":300},{"opacity":100,"in":[3700,3700]},{"in":[3700,Infinity],"opacity":0,"fade":300}], $(this)); /* scroll effect */
-$('#u399-8').registerOpacityScrollEffect([{"in":[-Infinity,3700],"opacity":0,"fade":300},{"opacity":100,"in":[3700,3700]},{"in":[3700,Infinity],"opacity":0,"fade":300}], $(this)); /* scroll effect */
-$('#u449-4').registerOpacityScrollEffect([{"in":[-Infinity,4800],"opacity":0,"fade":300},{"opacity":100,"in":[4800,4800]},{"in":[4800,Infinity],"opacity":0,"fade":300}], $(this)); /* scroll effect */
-$('#u450-8').registerOpacityScrollEffect([{"in":[-Infinity,4800],"opacity":0,"fade":300},{"opacity":100,"in":[4800,4800]},{"in":[4800,Infinity],"opacity":0,"fade":300}], $(this)); /* scroll effect */
+$('#u394-4').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,3700],"fade":300},{"opacity":100,"in":[3700,3700]},{"opacity":0,"in":[3700,Infinity],"fade":300}], $(this)); /* scroll effect */
+$('#u399-8').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,3700],"fade":300},{"opacity":100,"in":[3700,3700]},{"opacity":0,"in":[3700,Infinity],"fade":300}], $(this)); /* scroll effect */
+$('#u449-4').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,4800],"fade":300},{"opacity":100,"in":[4800,4800]},{"opacity":0,"in":[4800,Infinity],"fade":300}], $(this)); /* scroll effect */
+$('#u450-8').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,4800],"fade":300},{"opacity":100,"in":[4800,4800]},{"opacity":0,"in":[4800,Infinity],"fade":300}], $(this)); /* scroll effect */
 $('#u296-5').registerPositionScrollEffect([{"speed":[0,-0.2],"in":[-Infinity,824.65]},{"speed":[0,0],"in":[824.65,Infinity]}], $(this)); /* scroll effect */
-$('#u296-5').registerOpacityScrollEffect([{"in":[-Infinity,824.65],"opacity":0,"fade":183.95},{"opacity":100,"in":[824.65,824.65]},{"in":[824.65,Infinity],"opacity":0,"fade":651.05}], $(this)); /* scroll effect */
+$('#u296-5').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,824.65],"fade":183.95},{"opacity":100,"in":[824.65,824.65]},{"opacity":0,"in":[824.65,Infinity],"fade":651.05}], $(this)); /* scroll effect */
 $('#u303-5').registerPositionScrollEffect([{"speed":[0,0.2],"in":[-Infinity,1170.85]},{"speed":[0,0],"in":[1170.85,Infinity]}], $(this)); /* scroll effect */
-$('#u303-5').registerOpacityScrollEffect([{"in":[-Infinity,1170.85],"opacity":0,"fade":170},{"opacity":100,"in":[1170.85,1170.85]},{"in":[1170.85,Infinity],"opacity":0,"fade":651.05}], $(this)); /* scroll effect */
-$('#u309-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,2630.25]},{"speed":[0,0],"in":[2630.25,Infinity]}], $(this)); /* scroll effect */
-$('#u309-4').registerOpacityScrollEffect([{"in":[-Infinity,2630.25],"opacity":0,"fade":261.6},{"opacity":100,"in":[2630.25,2630.25]},{"in":[2630.25,Infinity],"opacity":0,"fade":439.35}], $(this)); /* scroll effect */
+$('#u303-5').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,1170.85],"fade":170},{"opacity":100,"in":[1170.85,1170.85]},{"opacity":0,"in":[1170.85,Infinity],"fade":651.05}], $(this)); /* scroll effect */
+$('#u309-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,2650.25]},{"speed":[0,0],"in":[2650.25,Infinity]}], $(this)); /* scroll effect */
+$('#u309-4').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,2650.25],"fade":261.6},{"opacity":100,"in":[2650.25,2650.25]},{"opacity":0,"in":[2650.25,Infinity],"fade":439.35}], $(this)); /* scroll effect */
 $('#u363').registerPositionScrollEffect([{"speed":[0,0.2],"in":[-Infinity,3350]},{"speed":[0,0.2],"in":[3350,Infinity]}], $(this)); /* scroll effect */
-$('#u363').registerOpacityScrollEffect([{"in":[-Infinity,3350],"opacity":0,"fade":400},{"opacity":100,"in":[3350,3350]},{"in":[3350,Infinity],"opacity":0,"fade":821.9}], $(this)); /* scroll effect */
+$('#u363').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,3350],"fade":400},{"opacity":100,"in":[3350,3350]},{"opacity":0,"in":[3350,Infinity],"fade":821.9}], $(this)); /* scroll effect */
 $('#u390').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,3779.6]},{"speed":[0,1],"in":[3779.6,Infinity]}], $(this)); /* scroll effect */
 $('#u434').registerPositionScrollEffect([{"speed":[0,0.2],"in":[-Infinity,4550]},{"speed":[0,0.2],"in":[4550,Infinity]}], $(this)); /* scroll effect */
-$('#u434').registerOpacityScrollEffect([{"in":[-Infinity,4550],"opacity":0,"fade":400},{"opacity":100,"in":[4550,4550]},{"in":[4550,Infinity],"opacity":0,"fade":793.2}], $(this)); /* scroll effect */
+$('#u434').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,4550],"fade":400},{"opacity":100,"in":[4550,4550]},{"opacity":0,"in":[4550,Infinity],"fade":793.2}], $(this)); /* scroll effect */
 $('#u448').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,4942.2]},{"speed":[0,1],"in":[4942.2,Infinity]}], $(this)); /* scroll effect */
 $('#u280').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,1950.44]},{"speed":[0,0],"in":[1950.44,Infinity]}], $(this)); /* scroll effect */
-$('#u280').registerOpacityScrollEffect([{"in":[-Infinity,1950.44],"opacity":0,"fade":267},{"opacity":100,"in":[1950.44,1950.44]},{"in":[1950.44,Infinity],"opacity":0,"fade":728.95}], $(this)); /* scroll effect */
+$('#u280').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,1950.44],"fade":267},{"opacity":100,"in":[1950.44,1950.44]},{"opacity":0,"in":[1950.44,Infinity],"fade":728.95}], $(this)); /* scroll effect */
 });/* scroll effects for one breakpoint */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
